--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,15 @@
+/*debug*/
 .debug{
-  width: 100%;
-  height: 200px;
   background-color: red;
+  border: 2px solid black;
+}
+/*header*/
+#nav-header{
+  display: block;
+}
+/*media md and xs header*/
+@media screen and (max-width: 992px) and (min-width: 768px){
+  #jumbo{
+    max-height: 400px;
+  }
 }
