--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,74 @@
-/*debug*/
-.debug{
-  background-color: red;
-  border: 2px solid black;
+.padding_top_80 {
+  padding-top: 80px;
 }
-.margin_bottom10{
-  margin-bottom: 10%;
+.padding_bottom_80 {
+  padding-bottom: 80px;
 }
-#nav-header{
-  width: 100%;
+
+.wrapper_60 {
+  width: 60%;
+  margin: 0 auto;
+}
+.bg_green {
+  background-color: lightgreen;
+}
+.btn_green {
+  background-color: #158F77;
+  color: white;
+  text-transform: uppercase;
+}
+.btn_green .glyphicon{
+  vertical-align: text-top;
+}
+
+/* header */
+.header_top {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 3;
-  height: 50px;
+  width: 100%;
+  height: 80px;
+  background: blue;
+  line-height: 80px;
 }
-#jumbo{
-  padding: 20px;
+
+/* Jumbo */
+.jumbo {
+  margin-top: 80px;
+  padding: 80px 0;
 }
-/*media md and xs header*/
-@media screen and (max-width: 992px) and (min-width: 768px){
-  #jumbo{
-    max-height: 400px;
+.jumbo_text {
+  width: 60%;
+  margin: 0 auto;
+}
+
+/* Portfolio */
+.box_portfolio {
+  width: 100%;
+  height: 300px;
+  margin-bottom: 30px;
+  background-color: blue;
+}
+
+/* Footer */
+.footer_top {
+  background-color: blue;
+}
+.footer_bottom {
+  padding: 20px 0;
+  background-color: darkblue;
+}
+
+
+@media screen and (max-width: 768px) {
+  .wrapper_xs_100 {
+    width: 100%;
+    margin: 0 auto;
   }
 }
-/*portfolio*/
-.portfolio-box{
-  height: 80px;
-  margin: 10px;
-  background-color: blue;
-  border-radius: 5px;
-}
-/*copyright*/
-.copyright{
-  height: 100px;
+@media screen and (min-width: 768px) {
+  .wrapper_md_60 {
+    width: 60%;
+    margin: 0 auto;
+  }
 }
