--- a/css/style.css
+++ b/css/style.css
@@ -20,18 +20,6 @@
 .btn_green .glyphicon{
   vertical-align: text-top;
 }
-
-/* header */
-.header_top {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 80px;
-  background: #2c3e50;
-  line-height: 80px;
-}
-
 .font_size30{
   font-size: 30px;
 }
@@ -44,6 +32,48 @@
 .size_30{
   width:30%;
 }
+
+/* header */
+.header_top {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 80px;
+  background: #2c3e50;
+  line-height: 80px;
+}
+.icon_star::after{
+  content:"";
+  display: inline-block;
+  clear: both;
+  vertical-align:super;
+  margin-left: 10px;
+  margin-top: 5px;
+  width: 100%;
+  max-width: 100px;
+  height: 5px;
+  border-bottom: 5px solid #fff;
+  border-radius: 4px;
+}
+.icon_star::before{
+  content:"";
+  display: inline-block;
+  clear: both;
+  vertical-align:super;
+  margin-right: 10px;
+  margin-top: 5px;
+  width: 100%;
+  max-width: 100px;
+  height: 5px;
+  border-bottom: 5px solid #fff;
+  border-radius: 4px;
+}
+.icon_star{
+  display: block;
+  font-size: 30px;
+  color: #fff;
+}
 /* Jumbo */
 .jumbo {
   margin-top: 80px;
@@ -53,7 +83,6 @@
   width: 60%;
   margin: 0 auto;
 }
-
 /* Portfolio */
 .box_portfolio {
   width: 100%;
