--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 2;
   width: 100%;
   height: 80px;
   background: #2c3e50;
@@ -85,9 +86,6 @@
 }
 #cabin{
   background-image: url(https://blackrockdigital.github.io/startbootstrap-freelancer/img/portfolio/cabin.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
 }
 #cake{
   background-image: url(https://blackrockdigital.github.io/startbootstrap-freelancer/img/portfolio/cake.png);
